Solucion de la prueba

--- a/Prueba_unidad_IV.ipynb
+++ b/Prueba_unidad_IV.ipynb
@@ -63,7 +63,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aquí se realiza el ejercicio 1"
+    "# Aquí se realiza el ejercicio 1\n",
+    "suma = 0\n",
+    "\n",
+    "while True:\n",
+    "    try:\n",
+    "        numero = int(input(\"Ingrese un numero ENTERO debe ser POSITIVO: \"))\n",
+    "        if numero > 0:\n",
+    "            break  \n",
+    "        else:\n",
+    "            print(\"El numero debe ser un entero positivo, verifique los numeros que ingreso e intente de nuevo.\")\n",
+    "    except ValueError:\n",
+    "        print(\"No estas ingresando un numero entero, necesito un entero para poder realizar la suma. Ingresa un numero entero\")\n",
+    "\n",
+    "calculo = numero\n",
+    "\n",
+    "while calculo > 0:\n",
+    "    digito = calculo % 10\n",
+    "    \n",
+    "    suma += digito\n",
+    "    \n",
+    "    calculo //= 10\n",
+    "\n",
+    "print(f\"La suma de los digitos es: {suma}\")"
    ]
   },
   {
