Solucion de la prueba

--- a/Prueba_unidad_IV.ipynb
+++ b/Prueba_unidad_IV.ipynb
@@ -22,6 +22,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c6d5ee4d",
+   "metadata": {},
+   "source": [
+    "Valeryn Duque, C.I-31.708.131\n",
+    "Anyer Villaroel, C.I-30.209.139"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "39f8612f",
    "metadata": {},
    "source": [
@@ -67,25 +76,23 @@
     "suma = 0\n",
     "\n",
     "while True:\n",
-    "    try:\n",
-    "        numero = int(input(\"Ingrese un numero ENTERO debe ser POSITIVO: \"))\n",
-    "        if numero > 0:\n",
-    "            break  \n",
-    "        else:\n",
-    "            print(\"El numero debe ser un entero positivo, verifique los numeros que ingreso e intente de nuevo.\")\n",
-    "    except ValueError:\n",
-    "        print(\"No estas ingresando un numero entero, necesito un entero para poder realizar la suma. Ingresa un numero entero\")\n",
+    "    numero_ingresado = input(\"Ingrese un número entero positivo: \")\n",
+    "    \n",
+    "    if numero_ingresado.isdigit() and int(numero_ingresado) > 0:\n",
+    "        numero = int(numero_ingresado)\n",
+    "        break  \n",
+    "    else:\n",
+    "        print(\"El numero debe ser un entero positivo, verifique los numeros que ingreso e intente de nuevo.\")\n",
     "\n",
     "calculo = numero\n",
     "\n",
     "while calculo > 0:\n",
+    "    \n",
     "    digito = calculo % 10\n",
-    "    \n",
     "    suma += digito\n",
-    "    \n",
     "    calculo //= 10\n",
     "\n",
-    "print(f\"La suma de los digitos es: {suma}\")"
+    "print(f\"La suma de los dígitos es: {suma}\")"
    ]
   },
   {
@@ -117,7 +124,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aquí se realiza el ejercicio 2"
+    "# Aquí se realiza el ejercicio 2\n",
+    "vocales = 0\n",
+    "consonantes = 0\n",
+    "\n",
+    "frase = input(\"Ingrese una frase: \")\n",
+    "\n",
+    "vocales_permitidas = \"aeiou\"\n",
+    "\n",
+    "for caracter in frase:\n",
+    "    caracter_minuscula = caracter.lower()\n",
+    "    if caracter_minuscula.isalpha():\n",
+    "        if caracter_minuscula in vocales_permitidas:\n",
+    "            vocales += 1\n",
+    "        else:\n",
+    "            consonantes += 1\n",
+    "\n",
+    "print(f\"Vocales: {vocales}, Consonantes: {consonantes}\")"
    ]
   },
   {
