Solucion de la prueba completo ultima version

--- a/Prueba_unidad_IV.ipynb
+++ b/Prueba_unidad_IV.ipynb
@@ -174,7 +174,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aquí se resuelve el ejercicio 3"
+    "# Aquí se resuelve el ejercicio 3\n",
+    "\n",
+    "numero = int(input(\"ingrese un número entero mayor a 1: \"))\n",
+    "numero_entero = 0\n",
+    "rango = range(1,numero)\n",
+    "\n",
+    "for prueba in rango:\n",
+    "    if numero / (prueba + 1) != 1:\n",
+    "        numero_entero = numero / (prueba + 1)\n",
+    "        if numero / (prueba + 1) == int(numero_entero):\n",
+    "            print(f\"el número {numero} no es primo\")\n",
+    "            break\n",
+    "        else:\n",
+    "            continue\n",
+    "    print(\"sí, es primo\")"
    ]
   },
   {
@@ -212,7 +226,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aqui se resuleve el ejercicio 4"
+    "# Aqui se resuleve el ejercicio 4\n",
+    "\n",
+    "primer_numero = int(input(\"ingrese un numero entero: \"))\n",
+    "segundo_numero = int(input(\"ingrese otro numero entero: \"))\n",
+    "\n",
+    "while segundo_numero != 0:\n",
+    "    cociente = int(primer_numero / segundo_numero)\n",
+    "    residuo = primer_numero % segundo_numero\n",
+    "    primer_numero = segundo_numero\n",
+    "    segundo_numero = residuo\n",
+    "    if segundo_numero == 0:\n",
+    "        break\n",
+    "    print(f\"el MCD es: {primer_numero}\")"
    ]
   },
   {
